--- a/style.css
+++ b/style.css
@@ -417,6 +417,10 @@ footer p {
     grid-template-columns: repeat(1, 1fr);
   }
 
+  .card-txt button{
+    margin-top: 50px;
+  }
+
   .service-container {
     margin-top: 0;
     margin-bottom: 60px;
